<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true">

    <ImageView
            android:id="@+id/iv_login_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img"
            tools:ignore="ContentDescription"/>

    <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            tools:text="@string/tx_login_title_day"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:textAlignment="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/tx_login_hello"
            android:textColor="#9affffff"
            android:textSize="12sp"
            android:textAlignment="center"
            tools:ignore="SmallSp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginBottom="120dp"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="50.0dp"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/ic_phone_white_24dp"
                android:paddingStart="8.0dp"
                android:paddingEnd="8.0dp"
                android:drawablePadding="8.0dp"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:hint="@string/tx_hint_phone"
                android:textColorHint="@color/textHintColor"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_login_password"
                android:layout_width="match_parent"
                android:layout_height="50.0dp"
                android:layout_marginTop="8.0dp"
                android:visibility="gone"
                tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:paddingStart="8.0dp"
                    android:paddingEnd="8.0dp"
                    android:drawablePadding="8.0dp"
                    android:hint="@string/tx_hint_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                    android:id="@+id/iv_password_visibility"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_visibility_white_24dp"
                    app:layout_constraintTop_toTopOf="@+id/line_password"
                    app:layout_constraintEnd_toStartOf="@+id/line_password"
                    app:layout_constraintBottom_toBottomOf="@+id/line_password"
                    android:layout_marginEnd="8dp"
                    tools:ignore="ContentDescription"/>

            <View
                    android:id="@+id/line_password"
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_lostPassword"/>

            <TextView
                    android:id="@+id/tv_lostPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/tx_lost_password"
                    android:textAlignment="center"
                    android:textColor="#96ffffff"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/et_password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_login_sms"
                android:layout_width="match_parent"
                android:layout_height="50.0dp"
                android:layout_marginTop="8.0dp">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_sms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edit_text"
                    android:drawableLeft="@drawable/ic_sms_white_24dp"
                    android:paddingStart="8.0dp"
                    android:paddingEnd="8.0dp"
                    android:drawablePadding="8.0dp"
                    android:hint="@string/tx_hint_sms"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <View
                    android:id="@+id/line_sms"
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_request_verification_code"/>

            <TextView
                    android:id="@+id/tv_request_verification_code"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="#96ffffff"
                    android:text="@string/tx_get_sms"
                    app:layout_constraintEnd_toEndOf="@+id/et_sms"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/tx_hint_verify_sms_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tv_login_hint"
                tools:text="@string/tv_login_hint"
                android:textColor="#9affffff"
                android:textSize="12sp"
                android:textAlignment="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50.0dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_change_login_way"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tx_change_login_via_password"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:textAlignment="textStart"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"/>

            <com.flyco.roundview.RoundTextView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:text="@string/tx_login"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:rv_strokeColor="@color/gray"
                    app:rv_cornerRadius="6dp"
                    app:rv_strokeWidth="0.5dp"/>
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/rl_agreement"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/iv_agreement"
                    android:layout_width="18.0dp"
                    android:padding="2dp"
                    android:layout_height="18.0dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/check_pressed"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_agreement"
                    android:gravity="center"
                    android:text="@string/tx_agreement"
                    android:textColor="#96ffffff"/>
        </RelativeLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tx_login_privacy_promise"
                android:textColor="#96ffffff"/>
    </LinearLayout>
</RelativeLayout>
