<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/iv_img_shower"
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:layout_margin="2dp"
                tools:ignore="ContentDescription"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tv_mall_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/tx_tianmao"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"
                        tools:ignore="SmallSp"/>

                <TextView
                        android:id="@+id/tv_sales_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/textColor"
                        tools:text="当月销量：869"
                        android:textSize="10sp"
                        tools:ignore="SmallSp"/>
            </RelativeLayout>

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    tools:text="月光宝盒Q100 10000毫安聚合物移动电源"
                    android:textColor="@color/black"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_price"
                        tools:ignore="ContentDescription"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:text="￥"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/red"
                        android:textSize="@dimen/global_small_text_size"/>

                <TextView
                        android:id="@+id/tv_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:maxLines="1"
                        tools:text="79"
                        android:textColor="@color/red"
                        android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:id="@+id/ll_get"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_get_btn"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="34dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/tx_get_quan"
                            android:textColor="@color/red"
                            android:textSize="@dimen/global_mid_text_size"/>

                    <View
                            android:id="@+id/imageView"
                            android:layout_width="0.5dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/ic_line"/>

                    <TextView
                            android:id="@+id/tx_get_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="5dp"
                            tools:text="2000元券"
                            android:textColor="@color/red"
                            android:textSize="@dimen/global_mid_text_size"/>
                </LinearLayout>

                <TextView
                        android:id="@+id/tx_buy_url"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_buy_btn"
                        android:gravity="center"
                        android:maxLines="1"
                        android:padding="5dp"
                        android:text="@string/tx_go_to_bug"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/global_mid_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.flyco.labelview.LabelView
            android:id="@+id/lv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            app:lv_background_color="@color/red"
            app:lv_text="HOT"
            app:lv_text_size="@dimen/global_small_text_size"/>
</androidx.cardview.widget.CardView>